# -jdhnew

./: .gitignore  ADD_HELIUS_RPC.md  AIRDROP_SETUP.md  Anchor.toml  App.tsx  BACKEND_IMPLEMENTATION.md  BACKEND_MIGRATION_SUMMARY.md  BACKEND_SETUP.md  BIP39_STANDARD_DOCUMENTATION.md  BROWSER_CRASH_FINAL.md  BROWSER_CRASH_FIX.md  BROWSER_CRASH_SOLUTION.md  BUG_REPORT.md  BUILD_AND_DEPLOY_NOW.md  BUILD_NOW.md  CHECK_DATABASE.md  CHECK_NETWORK_STATUS.md  CLEAN_AND_REBUILD.md  COIN_LOGOS_IMPLEMENTATION.md  CONTINUE_AFTER_SOLANA_INSTALL.md  CURRENT_STATUS.md  CURRENT_WORK_STATUS.md  DEBUG_LOGIN_SEED_ISSUE.md  DEBUG_REGISTRATION_ERROR.md  DEPLOYMENT.md  DEPLOYMENT_PRODUCTION.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_QUICK_START.md  DEPLOY_TO_VERCEL.md  ENV_VARS_ADDED.md  ENV_VARS_STATUS.md  FEATURE_GAP_REPORT.md  FINAL_FIX_BUMPS_ERROR.md  FIX_ANCHOR_TOML_ERROR.md  FIX_ANCHOR_TOML_SEQUENCE_ERROR.md  FIX_ANCHOR_WARNINGS.md  FIX_BUMPS_TRAIT_ERROR.md  FIX_CC_LINKER_ERROR.md  FIX_COMPILATION_ERRORS.md  (+115 more)
api/: test-supabase.ts
clients/: jdhChainClient.ts
components/: ActionModals.tsx  AirdropPage.tsx  ApiPaymentModal.tsx  AssetList.tsx  BottomNav.tsx  CoinDetail.tsx  ConfirmationModals.tsx  ErrorBoundary.tsx  MiningPage.tsx  Onboarding.tsx  QuickActions.tsx  SecondaryViews.tsx  SecurityModals.tsx  SettingsPage.tsx  Sidebar.tsx  StakingPage.tsx  TokenMetaDisplay.tsx  UpdateModal.tsx  WalletSetup.tsx
hooks/: useMockCoinPrices.ts  useSolanaWallet.ts  (+3 more)
programs/jdh-chain/: Cargo.toml
programs/jdh-chain/src/: governance.rs  lib.rs  mining.rs  staking.rs
(+91 files in other folders)
