[package]
name = "jdh-chain"
version = "0.1.0"
description = "JDH Chain - Custom Solana Program for JDH Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jdh_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "~1.18.0"

