[package]
name = "jdh-chain"
version = "0.1.0"
description = "JDH Chain - Custom Solana Program for JDH Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jdh_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"



